refactoring all code

--- a/index.html
+++ b/index.html
@@ -3,535 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Sweet Bonanza Слот</title>
     <style>
-        @font-face {
-            font-family: 'Druk Wide Cyr';
-            src: url('assets/fonts/Druk Wide Cyr Bold.otf') format('truetype');
-        }
 
-        body, html {
-            margin: 0 auto;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #333, #666, transparent), url("assets/mask.png");
-            background-size: cover;
-            background-position: center;
-        }
-
-        .container {
-            display: flex;
-            min-height: 100vh;
-            width: 100%;
-            max-width: 100%;
-            flex: 1;
-        }
-
-        .header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            max-width: 397px;
-            height: 117px;
-            background-color: #E50914;
-            padding: 10px;
-            border-radius: 0 0 140px 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-        }
-
-        .left-side {
-            width: 50%;
-            flex: 1;
-            position: relative;
-        }
-
-        .left-side::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(to right, rgba(0, 0, 0, 0.7), transparent);
-        }
-
-        .people {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 80%;
-            background-image: url('assets/people.png');
-            background-size: cover;
-            background-position: center;
-            z-index: 1;
-        }
-
-        .right-side {
-            width: 50%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            box-sizing: border-box;
-        }
-
-        .right-side-text {
-            text-align: center;
-            font-family: 'Druk Wide Cyr', Arial, sans-serif;
-            font-weight: 500;
-            width: 549px;
-            max-width: 100%;
-        }
-
-        .right-side-text1 {
-            font-size: 31px;
-            color: #ffffff;
-        }
-
-        .right-side-text-container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #E50914;
-            width: 549px;
-            height: 54px;
-            max-width: 100%;
-        }
-
-        .right-side-text-container, p {
-            font-family: 'Druk Wide Cyr', Arial, sans-serif;
-            font-weight: 500;
-            font-size: 41px;
-            color: #ffffff;
-        }
-
-        .slot-machine {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 777px;
-            max-width: 100%;
-            height: 584px;
-            background-image: url('assets/slot.png');
-            background-size: contain;
-            background-repeat: no-repeat;
-            position: relative;
-            margin-bottom: 20px;
-        }
-
-        .slot-container {
-            display: flex;
-            overflow: hidden;
-            width: 700px;
-            height: 70%;
-            max-width: 100%;
-        }
-
-        .slot-column {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-            padding: 15px 5px 0 5px;
-        }
-
-        .slot-item {
-            width: 100%;
-            height: 100px;
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
-            transition: opacity 0.2s;
-        }
-
-        .purple-shape {
-            background-image: url('assets/rubin-purpu.png');
-        }
-
-        .plum {
-            background-image: url('assets/plum.png');
-        }
-
-        .watermelon {
-            background-image: url('assets/watermelon.png');
-        }
-
-        .banana {
-            background-image: url('assets/banana.png');
-        }
-
-        .heart {
-            background-image: url('assets/heart.png');
-        }
-
-        .green-shape {
-            background-image: url('assets/rubin green.png');
-        }
-
-        .grapes {
-            background-image: url('assets/grape.png');
-        }
-
-        .lollipop {
-            background-image: url('assets/candy.png');
-        }
-
-        .apple {
-            background-image: url('assets/apple.png');
-        }
-
-        .blue-shape {
-            background-image: url('assets/rubin-blue.png');
-        }
-
-        .steps {
-            display: flex;
-            width: 611px;
-            height: 175px;
-            max-width: 100%;
-            align-items: center;
-            justify-content: space-between;
-        }
-        .steps img{
-            width: 190px;
-            height: 175px;
-        }
-
-        .footer {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #000000;
-            height: 58px;
-            padding: 0 20px;
-            position: relative;
-            z-index: 2;
-        }
-
-        .footer img {
-            width: 41px;
-            height: 15px;
-        }
-
-        .footer-left {
-            display: flex;
-            gap: 10px;
-        }
-
-        .footer-right {
-            width: 27px;
-            height: 27px;
-        }
-
-        .modal {
-            padding-top: 30px;
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0, 0, 0, 0.7);
-        }
-
-        .modal-content {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            background-color: #E50914;
-            margin: 0 auto;
-            width: 871px;
-            max-width: 80%;
-            text-align: center;
-            box-sizing: border-box;
-        }
-
-        .modal-text {
-            color: #fff;
-            font-family: 'Druk Wide Cyr', Arial, sans-serif;
-            font-size: 1.5em;
-            text-align: center;
-        }
-
-        .claim-button {
-            width: 359px;
-            max-width: 100%;
-            height: 59px;
-            display: block;
-            margin: 20px auto;
-            background-color: #E50914;
-            color: #ffffff;
-            font-family: 'Druk Wide Cyr', Arial, sans-serif;
-            font-size: 1.5em;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-        }
-
-        .claim-button:hover {
-            background-color: #e0e0e0;
-        }
-
-        .modal-footer {
-            width: 100%;
-            text-align: center;
-        }
-
-        .modal-footer img {
-            width: 894px;
-            max-width: 100%;
-            height: auto;
-        }
-
-        .steps1 {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        .steps1 img {
-            width: auto;
-            height: 175px;
-        }
-
-        @media (max-width: 1350px) {
-            .slot-item {
-                height: 8vw;
-            }
-            .right-side{
-                width: 100%;
-            }
-        }
-
-        @media (max-width: 900px) {
-            .right-side-text-container p {
-                font-size: 35px;
-            }
-
-            .left-side {
-                display: none;
-            }
-            .steps{
-                display: flex;
-                flex-wrap: wrap;
-            }
-            .right-side{
-                width: 100%;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .left-side {
-                display: none;
-            }
-
-            .slot-machine {
-                height: 100vw;
-            }
-
-            .slot-item {
-                height: 10vw;
-            }
-
-            .header {
-                width: 30%;
-                height: 36px;
-            }
-
-            .header img {
-                width: 50%;
-            }
-
-            .right-side-text-container p {
-                font-size: 28px;
-            }
-            .steps{
-                display: flex;
-                flex-wrap: wrap;
-            }
-            .modal-content {
-                width: 90%;
-                height: auto;
-                padding: 10px;
-            }
-
-            .modal-text {
-                font-size: 1.2em;
-            }
-
-            .modal-footer img {
-                width: 100%;
-                max-width: 100%;
-                height: auto;
-            }
-            .steps1{
-                display: flex;
-                flex-wrap: wrap;
-            }
-            .right-side{
-                width: 100%;
-            }
-        }
-
-        @media (max-width: 480px) {
-            .left-side {
-                display: none;
-            }
-
-            .header {
-                width: 30%;
-                height: 36px;
-            }
-
-            .header img {
-                width: 70%;
-            }
-
-            .right-side {
-                width: 100%;
-                max-width: 100%;
-                padding-top: 140px;
-            }
-
-            .slot-item {
-                height: 10vw;
-            }
-
-            .right-side-text-container p {
-                font-size: 28px;
-            }
-            .modal-content {
-                width: 95%;
-                height: auto;
-                padding: 10px;
-            }
-
-            .modal-text {
-                font-size: 1em;
-            }
-
-            .modal-footer img {
-                width: 100%;
-                max-width: 100%;
-                height: auto;
-            }
-            .steps1{
-                display: flex;
-                flex-wrap: wrap;
-            }
-        }
-
-        @media (max-width: 375px) {
-            .header {
-                width: 30%;
-                height: 36px;
-            }
-
-            .header img {
-                width: 70%;
-            }
-
-            .left-side {
-                display: block;
-            }
-
-            .right-side {
-                display: flex;
-                align-items: center;
-                justify-content: start;
-                width: 100%;
-                max-width: 100%;
-            }
-
-            .right-side-text-container p {
-                font-size: 28px;
-            }
-
-            .slot-container {
-                height: 80%;
-            }
-
-            .steps {
-                display: none;
-                flex-wrap: wrap;
-                align-items: center;
-                justify-content: center;
-            }
-            .slot-machine {
-                height: 100vw;
-            }
-            .steps1{
-                display: none;
-            }
-
-        }
-
-
-        /* MacBook Air and Pro 13-inch */
-        @media only screen
-        and (min-width: 1280px)
-        and (max-width: 1440px)
-        and (-webkit-min-device-pixel-ratio: 2) {
-
-            .right-side-text {
-                width: 450px;
-                margin-bottom: 30px;
-            }
-
-            .right-side-text1 {
-                font-size: 28px;
-                margin-bottom: 15px;
-            }
-
-            .right-side-text-container {
-                width: 450px;
-                height: 45px;
-            }
-
-            .right-side-text-container p {
-                font-size: 34px;
-            }
-        }
-
-        /* MacBook Pro 14-inch and 16-inch */
-        @media only screen
-        and (min-width: 1512px)
-        and (max-width: 1728px)
-        and (-webkit-min-device-pixel-ratio: 2) {
-            .right-side-text {
-                width: 450px;
-                margin-bottom: 40px; /* Добавляем отступ снизу */
-            }
-
-            .right-side-text1 {
-                font-size: 31px; /* Возвращаем исходный размер шрифта */
-                margin-bottom: 20px; /* Добавляем отступ между текстовыми элементами */
-            }
-
-            .right-side-text-container {
-                width: 500px;
-                height: 50px;
-            }
-
-            .right-side-text-container p {
-                font-size: 38px;
-            }
-
-            /* ... остальные стили без изменений ... */
-        }
 
     </style>
 </head>
@@ -594,76 +69,6 @@
         <img src="assets/step%203.svg" alt="">
     </div>
 </div>
-<script>
-    const symbols = ['purple-shape', 'plum', 'watermelon', 'banana', 'heart', 'green-shape', 'grapes', 'lollipop', 'apple', 'blue-shape'];
-
-    function createSlotItems() {
-        const columns = document.querySelectorAll('.slot-column');
-        columns.forEach(column => {
-            for (let i = 0; i < 5; i++) { // Увеличим количество элементов
-                const item = document.createElement('div');
-                item.classList.add('slot-item');
-                item.classList.add(symbols[Math.floor(Math.random() * symbols.length)]);
-                column.appendChild(item);
-            }
-        });
-    }
-
-    function spinSlots() {
-        const columns = document.querySelectorAll('.slot-column');
-        let delays = [0, 100, 200, 300, 400, 500]; // Задержки для каждой колонки
-
-        columns.forEach((column, index) => {
-            setTimeout(() => {
-                let topPosition = 0;
-                const finalPosition = -1000; // Конечная позиция прокрутки
-                const duration = 2000; // Длительность анимации
-                const startTime = performance.now();
-
-                function animate(currentTime) {
-                    const elapsedTime = currentTime - startTime;
-                    if (elapsedTime < duration) {
-                        topPosition = easeInOutQuad(elapsedTime, 0, finalPosition, duration);
-                        column.style.transform = `translateY(${topPosition}px)`;
-                        requestAnimationFrame(animate);
-                    } else {
-                        column.style.transform = 'translateY(0)';
-                        for (let i = 0; i < 10; i++) {
-                            const item = column.children[0];
-                            column.appendChild(item);
-                        }
-                        if (index === columns.length - 1) {
-                            setTimeout(showWinModal, 500);
-                        }
-                    }
-                }
-
-                requestAnimationFrame(animate);
-            }, delays[index]);
-        });
-    }
-
-    // Функция плавности для анимации
-    function easeInOutQuad(t, b, c, d) {
-        t /= d / 2;
-        if (t < 1) return c / 2 * t * t + b;
-        t--;
-        return -c / 2 * (t * (t - 2) - 1) + b;
-    }
-
-
-    // function showWinModal() {
-    //     const winAmount = `
-    //     <div>до 200 000 KZT</div>
-    //     <div>100%</div>
-    //     <div>+500 FS</div>
-    // `;
-    //     document.getElementById('winAmount').innerHTML = winAmount;
-    //     document.getElementById('winModal').style.display = 'block';
-    // }
-
-    createSlotItems();
-    spinSlots();
-</script>
+<script src="script.js"></script>
 </body>
 </html>
